Code working as it should, Nathan this is ready for you to do some JS testing

--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -8,7 +8,11 @@
 <section>
 
     <div class="container">
-        <form action="" th:action="@{/addTest}" th:object="${newTestAtt}">
+
+        <div class="success" style="color: darkgreen">
+            <h6><span th:text="${saved}"></span></h6>
+        </div>
+        <form method="post" action="" th:action="@{/addTest}" th:object="${newTestAtt}">
 
             <label for="testName">Lab Name</label>
             <input type="text" id="testName" th:field="*{testName}">
