--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body>
 <section>
@@ -14,25 +15,42 @@
         </div>
         <form method="post" action="" th:action="@{/addTest}" th:object="${newTestAtt}">
 
-            <label for="testName">Lab Name</label>
-            <input type="text" id="testName" th:field="*{testName}">
+
+
+            <label for="testName" class="form-label">Lab Name</label>
+            <div class="input-group mb-3">
+                <input type="text" class="form-control"  id="testName" th:field="*{testName}">
+            </div>
+
 
             <label for="mode">Mode</label>
-            <input type="text" id="mode" th:field="*{mode}">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control"   id="mode" th:field="*{mode}">
+            </div>
 
             <label for="labTestNote">Add Note</label>
-            <input type="text" id="labTestNote" th:field="*{labTestNote}">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control"   id="labTestNote" th:field="*{labTestNote}">
+            </div>
+
 
             <label for="doctor">Doctor Name</label>
-            <input type="text" id="doctor" th:field="*{doctor}">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control"   id="doctor" th:field="*{doctor}">
+            </div>
+
 
             <label for="customer">Customer Name</label>
-            <input type="text" id="customer" th:field="*{customer}">
+            <div class="input-group mb-3">
+                <input type="text" class="form-control"   id="customer" th:field="*{customer}">
+            </div>
+
 
 
             <input type="submit" value="Submit">
         </form>
     </div>
 </section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
