--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -37,7 +37,16 @@
                </tr>
             </tbody>
         </table>
-
+        <div th:if="${admin != null }">
+            <div class="p-5">
+                <div class="text-center">
+                    <div class="btn btn-dark">
+                        <a href="/lms">LMS Dashboard</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+   
     </div>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
