--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -51,7 +51,7 @@
 
             <label for="address2">Address2</label>
             <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="address2" th:field="*{add1}">
+                <input type="text" class="form-control"   id="address2" th:field="*{add2}">
             </div>
 
 
@@ -60,7 +60,7 @@
                 <input type="text" class="form-control"   id="city" th:field="*{city}">
             </div>
 
-            <label for="state">Add Note</label>
+            <label for="state">State</label>
             <div class="input-group mb-4">
                 <input type="text" class="form-control"   id="state" th:field="*{state}">
             </div>
