--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -4,113 +4,162 @@
     <meta charset="UTF-8">
     <title>Test</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
+
+
 <body>
-<section>
+<div class="wrapper">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-blue nav-bottom-green">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Ndx Validate</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="/dashboard" class="nav-link">Dashboard</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/request" class="nav-link">Request New Account</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#documentation" class="nav-link">Documentation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/dashboard" class="nav-link">Request Archive</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/logout" class="nav-link">Sign Out</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="container">
+        <div class="card mt-5 bg-white">
+            <div class="card-header mb-3 ndx-header bg-blue nav-bottom-green">
+                <h4>New Account Request Form</h4>
+            </div>
+            <div class="success" style="color: darkgreen">
+                <h6><span th:text="${sent}"></span></h6>
+            </div>
+            <div class="form-container m-2">
+                <form class="mt-2" method="post" action="" th:action="@{/requestAccount}" th:object="${newAccount}">
 
-        <div class="success" style="color: darkgreen">
-            <h6><span th:text="${sent}"></span></h6>
+
+
+                    <label for="LabName" class="form-label">Lab Name</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"  id="LabName" th:field="*{labName}">
+                    </div>
+
+
+                    <label for="mode">Mode</label>
+                    <div class="input-group mb-3">
+                        <select class="form-control" id="mode" th:field="*{mode}">
+                            <option class="p-2" th:each="m : ${ndxMode}" th:value="${m.modeKey}" th:text="${m.mode}"></option>
+                        </select>
+                    </div>
+
+                    <label for="IsRush">Is Rush</label>
+                    <div class="input-group mb-3">
+
+                        <input type="text" class="form-control"   id="IsRush" th:field="*{isRush}">
+                    </div>
+
+                    <label for="doctorId">Old Doctor ID</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="doctorId" th:field="*{docId}">
+                    </div>
+
+
+                    <label for="customerId">Old Customer ID</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="customerId" th:field="*{customerId}">
+                    </div>
+
+                    <label for="address1">Address1</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="address1" th:field="*{add1}">
+                    </div>
+
+                    <label for="address2">Address2</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="address2" th:field="*{add2}">
+                    </div>
+
+
+                    <label for="city">City</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="city" th:field="*{city}">
+                    </div>
+
+                    <label for="state">State</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="state" th:field="*{state}">
+                    </div>
+
+                    <label for="zip">Zip</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="zip" th:field="*{zip}">
+                    </div>
+
+
+                    <label for="fName">Doctor First Name</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="fName" th:field="*{FName}">
+                    </div>
+
+                    <label for="lName">Doctor Last Name</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="lName" th:field="*{LName}">
+                    </div>
+
+                    <label for="email">Email</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="email" th:field="*{email}">
+                    </div>
+
+                    <label for="phone">Phone</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="phone" th:field="*{phone}">
+                    </div>
+
+                    <label for="licenceNo">Doctor Licence Number</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="licenceNo" th:field="*{licenceNo}">
+                    </div>
+
+
+                    <label for="nip">NPI Number</label>
+                    <div class="input-group mb-3">
+                        <input type="text" class="form-control"   id="nip" th:field="*{npi}">
+                    </div>
+
+                    <label for="labNote">Add Note</label>
+                    <div class="input-group mb-4">
+                        <input type="text" class="form-control"   id="labNote" th:field="*{notes}">
+                    </div>
+
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
+
         </div>
-        <form method="post" action="" th:action="@{/requestAccount}" th:object="${newAccount}">
 
-
-
-            <label for="LabName" class="form-label">Lab Name</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"  id="LabName" th:field="*{labName}">
-            </div>
-
-
-            <label for="mode">Mode</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="mode" th:field="*{mode}">
-            </div>
-
-            <label for="IsRush">Is Rush</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="IsRush" th:field="*{isRush}">
-            </div>
-
-            <label for="doctorId">Old Doctor ID</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="doctorId" th:field="*{docId}">
-            </div>
-
-
-            <label for="customerId">Old Customer ID</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="customerId" th:field="*{customerId}">
-            </div>
-
-            <label for="address1">Address1</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="address1" th:field="*{add1}">
-            </div>
-
-            <label for="address2">Address2</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="address2" th:field="*{add2}">
-            </div>
-
-
-            <label for="city">City</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="city" th:field="*{city}">
-            </div>
-
-            <label for="state">State</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="state" th:field="*{state}">
-            </div>
-
-            <label for="zip">Zip</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="zip" th:field="*{zip}">
-            </div>
-
-
-            <label for="fName">Doctor First Name</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="fName" th:field="*{FName}">
-            </div>
-
-            <label for="lName">Doctor Last Name</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="lName" th:field="*{LName}">
-            </div>
-
-            <label for="email">Email</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="email" th:field="*{email}">
-            </div>
-
-            <label for="phone">Phone</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="phone" th:field="*{phone}">
-            </div>
-
-            <label for="licenceNo">Doctor Licence Number</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="licenceNo" th:field="*{licenceNo}">
-            </div>
-
-
-            <label for="nip">NPI Number</label>
-            <div class="input-group mb-3">
-                <input type="text" class="form-control"   id="nip" th:field="*{npi}">
-            </div>
-
-            <label for="labNote">Add Note</label>
-            <div class="input-group mb-4">
-                <input type="text" class="form-control"   id="labNote" th:field="*{notes}">
-            </div>
-
-            <input type="submit" value="Submit">
-        </form>
     </div>
-</section>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+</div>
+
+
+
 </body>
+<footer >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/2effb491bc.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
+</footer>
 </html>
