--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -37,35 +37,29 @@
             </div>
         </div>
     </nav>
-    <div class="container">
-        <h5>You do not have permission to access this page</h5>
-    </div>
-    <div class="error-template mt-5 text-center">
-        <div class="card error-card bg-white">
-            <div class="card-header ndx-header bg-blue nav-bottom-green p-3">
-                <h4>Ndx Validate</h4>
-            </div>
-            <div class="card-body">
-                <div class="text-center">
-                    <h1 class="error-title">Access Denied</h1>
-                </div>
-                <div class="mt-3 error-tag text-center">
-                   Uh-Oh! You cannot go here.
-                </div>
-                <p class="text-center">It seems you are trying to access a page you are not permitted to access. Please contact the LMS Team for assistance</p>
-
-                <div class="text-center mt-5">
-                    <a class="btn ndx-btn-color" href="/dashboard">
-                        <i class="fas fa-undo-alt"></i>   Return to Dashboard
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
+<div class="error-template mt-5 text-center">
+     <div class="card error-card bg-white">
+         <div class="card-header ndx-header bg-blue nav-bottom-green p-3">
+              <h4>Ndx Validate</h4>
+         </div>
+         <div class="card-body">
+             <div class="text-center">
+                 <h1 class="error-title">404</h1>
+             </div>
+             <div class="mt-3 error-tag text-center">
+                 Well This is embarrassing.
+             </div>
+             <p class="text-center">It seems the an error has occurred and we are not able to process your request at this time.Please contact the LMS Team for assistance</p>
 
-
-
+             <div class="text-center mt-5">
+                 <a class="btn ndx-btn-color" href="/dashboard">
+                     <i class="fas fa-undo-alt"></i>   Return to Dashboard
+                 </a>
+             </div>
+         </div>
+     </div>
+</div>
 </body>
 <footer >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
