--- a/src/main/resources/templates/user_processed.html
+++ b/src/main/resources/templates/user_processed.html
@@ -37,61 +37,45 @@
             </div>
         </div>
     </nav>
-
-    <div class="container">
-
-        <div class="mb-3 mt-5">
-            <div class="lms-nav-btn-group text-center">
-                <div class="btn ndx-btn-color mx-2">
-                    <a href="/processed/requests">All Processed Requests</a>
-                </div>
-                <div class="btn ndx-btn-color mx-2">
-                    <a href="/my/processed/requests">My Processed Requests</a>
-                </div>
-            </div>
-        </div>
-        <div class="card mt-4 bg-white">
-            <div class="card-header bg-blue nav-bottom-green ndx-header">
-                <h4>New Account Request Queue</h4>
-            </div>
-            <div class="container mt-3">
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">Date</th>
-                        <th scope="col">Requester</th>
-                        <th scope="col">Lab Name</th>
-                        <th scope="col">Mode</th>
-                        <th scope="col">Doctor Name</th>
-                        <th scope="col">Practice Name </th>
-                        <th scope="col">State</th>
-                        <th scope="col">NPI No</th>
-                        <th scope="col">Licence No</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Process</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr th:each="s : ${requestList}">
-                        <td th:text="${#dates.format(s.timeStamp, 'yyyy/MM/dd : hh:mm a')}"></td>
-                        <td th:text="${s.mtUserName}"></td>
-                        <td th:text="${s.labName}"></td>
-                        <td th:text="${s.mode}"></td>
-                        <td th:text="${s.FName} + ' ' + ${s.LName} "></td>
-                        <td th:text="${s.PName}"></td>
-                        <td th:text="${s.state}"></td>
-                        <td th:text="${s.npi}"></td>
-                        <td th:text="${s.licenceNo}"></td>
-                        <td > <span th:if="${s.status == 0}">Not Processed</span></td>
-                        <td><h4 class="text-center color-green"><a href="/lms/process.html" th:href="@{/process/request/{id}(id=${s.accId})}" ><i class="far fa-dot-circle"></i></a></h4></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
 </div>
 
+<div class="container">
+    <section class="mt-5">
+        <div class="card bg-white">
+            <div class="card-header nav-bottom-green bg-blue ndx-header">
+                <h4 class="text-center"> All processed Requests</span>  </h4>
+            </div>
+        </div>
+        <div class="container">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Requested By</th>
+                    <th scope="col">Processed By</th>
+                    <th scope="col">Doctor #</th>
+                    <th scope="col">Customer #</th>
+                    <th scope="col">Existing Doctor # </th>
+                    <th scope="col">Existing Customer #</th>
+                    <th scope="col">View Details</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="s : ${processed}">
+                    <td th:text="${#dates.format(s.timeStamp, 'yyyy/MM/dd : hh:mm a')}"></td>
+                    <td th:text="${s.procBy}"></td>
+                    <td th:text="${s.newDocId}"></td>
+                    <td th:text="${s.newCusId}"></td>
+                    <td th:text="${s.EDocId}"></td>
+                    <td><h4 class="text-center color-green"><a href="/dashboard/edit_request.html" th:href="@{/edit_request/{id}(id=${s.accountRequest.accId})}" ><i class="fas fa-eye"></i></a></h4></td>
+                </tr>
+                </tbody>
+            </table>
+
+
+        </div>
+    </section>
+</div>
 
 
 </body>
