--- a/src/main/resources/templates/edit_request.html
+++ b/src/main/resources/templates/edit_request.html
@@ -13,7 +13,7 @@
 <div class="wrapper">
     <nav class="navbar navbar-expand-lg navbar-dark bg-blue nav-bottom-green">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Ndx Validate</a>
+            <a class="navbar-brand" href="/">Ndx Validate</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,7 +29,7 @@
                         <a href="#documentation" class="nav-link">Documentation</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/dashboard" class="nav-link">Request Archive</a>
+                        <a href="/processed/requests/complete" class="nav-link">Request Archive</a>
                     </li>
                     <li class="nav-item">
                         <a href="/logout" class="nav-link">Sign Out</a>
