--- a/src/main/resources/templates/user_processed.html
+++ b/src/main/resources/templates/user_processed.html
@@ -43,7 +43,7 @@
     <section class="mt-5">
         <div class="card bg-white">
             <div class="card-header nav-bottom-green bg-blue ndx-header">
-                <h4 class="text-center"> All processed Requests</span>  </h4>
+                <h4 class="text-center"> My Completed Requests</span>  </h4>
             </div>
         </div>
         <div class="container">
