Modified the request form to appear dynamically.  It now pulls in existing customer information into the form based off the mode and customerid field being changed.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -50,3 +50,12 @@
 .lms-nav-btn-group{
     display: inline-flex;
 }
+#wrapper {
+    min-height: calc(100vh - 70px);
+    margin-bottom: -50px;
+}
+
+.footer
+{
+    text-align: center!important;
+}
